--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ header{
     width: 100%;
     background-color: var(--orange);
     align-items: center;
-
+    
 
 }
 
@@ -82,5 +82,44 @@ tfoot {
     padding: 50px;
     color: var(--white);
 }
+
+/* main annecdote */
+
+#annecdote{
+    display: flex;
+}
+
+.btn-annecdote{
+    display: flex;
+    height: 50px;
+    align-items: center;
+    margin: auto;
+    margin-top: 50px;
+    border-radius: 100px;
+    background-color: #FF7F57;
+    color: #fff;
+    cursor: pointer;
+    font-size: 20px;
+    padding: 10px;
+    
+
+}
+.annecdote-title{
+    text-align: center;
+    margin-bottom: 50px;
+    text-decoration: underline;
+}
+
+.annecdote{
+    width: 300px;
+    height: auto;
+    background-color: #494343;
+    margin: auto;
+    padding: 100px;
+    color: var(--white);
+    margin-top: 100px;
+    border: 2px solid red;
+}
+
 
 
