--- a/style.css
+++ b/style.css
@@ -2,11 +2,15 @@
     --orange: #FF7F57;
     --white: #ffffff;
   }
-header{
+
+
+
+  header{
     display: flex;
     width: 100%;
     background-color: var(--orange);
     align-items: center;
+    justify-content: space-between;
     
 
 }
@@ -32,6 +36,21 @@ a{
     font-size: 20px;
     font-weight: 700;
 }
+
+
+
+.dark-mode {
+    background-color: black;
+    color: white;
+    margin-right: 20px;
+    border-radius: 50px;
+    padding: 20px;
+    cursor: pointer;
+ 
+}
+    
+
+
 
 /* main */
 
@@ -73,11 +92,14 @@ tfoot {
 
 
 /* bloc image du chien */
-
+.img{
+    margin: auto;
+    border: 10px solid rgb(0, 0, 0);
+}
 .image-dog{
     width: 300px;
     height: 200px;
-    background-color: #494343;
+    background-color: #b48282;
     margin: auto;
     padding: 50px;
     color: var(--white);
@@ -85,7 +107,7 @@ tfoot {
 
 /* main annecdote */
 
-#annecdote{
+#annecdot{
     display: flex;
 }
 
@@ -126,6 +148,43 @@ tfoot {
 
     background-color: var(--orange);
 }
+
+
+
+
+/* page acceuil */
+
+.acceuil{
+    display: flex;
+    padding: 50px;
+    margin: auto;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+
+}
+
+.bloc-annecdote,.bloc-favoris,.bloc-race{
+    width: 400px;
+    background-color: #000000;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+   
+
+}
+.title-bloc-anecdote,.title-bloc-favoris,.title-bloc-race{
+    color: #FF7F57;
+}
+.result-bloc-anecdote,.result-bloc-favoris,.result-bloc-race{
+    font-size: 20px;
+    font-weight: 900;
+}
+
+
+
+
 
 
 
