--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 :root {
-    --orange: #FF7F57;
+    --orange: #ec7b58;
     --white: #ffffff;
-  }
+   
+}
 
+body {
+    background: white;
+}
 
-
-  header{
+header{
     display: flex;
     width: 100%;
     background-color: var(--orange);
@@ -14,6 +17,24 @@
     
 
 }
+
+/* dark-mode  */
+
+.dark-toggle {
+    background-color: rgb(151, 25, 25);
+    color: white;
+    margin-right: 20px;
+    border-radius: 100%;
+    padding: 20px;
+    cursor: pointer;
+}
+
+body.dark{
+    color: white;
+    background: black;
+}
+
+
 
 .logo{
     margin-left: 20px;
@@ -39,15 +60,7 @@ a{
 
 
 
-.dark-mode {
-    background-color: black;
-    color: white;
-    margin-right: 20px;
-    border-radius: 50px;
-    padding: 20px;
-    cursor: pointer;
- 
-}
+
     
 
 
