--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ tfoot {
 
 #annecdot{
     display: flex;
+    flex-direction: column;
 }
 
 .btn-annecdote{
@@ -142,19 +143,23 @@ tfoot {
 }
 .annecdote-title{
     text-align: center;
-    margin-bottom: 50px;
+    margin:0.5em;
     text-decoration: underline;
 }
 
 .annecdote{
     width: 300px;
-    height: auto;
+    height: 300px;
     background-color: #494343;
     margin: auto;
-    padding: 100px;
     color: var(--white);
     margin-top: 100px;
     border: 2px solid red;
+}
+
+.text-annecdote{
+
+    padding: 2em;
 }
 
 
@@ -162,6 +167,32 @@ tfoot {
 
     background-color: var(--orange);
 }
+
+
+.Ac{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.divm{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1em;
+    width: 200px;
+    height: 150px;
+    background-color: gray;
+    color: white;
+    border-radius: 10px;
+    text-align: center;
+}
+
+
 
 
 
